<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_detail"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="@dimen/main_padding">

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="@dimen/image_detail_size"
            android:layout_height="@dimen/image_detail_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_toEndOf="@+id/iv_product_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_subtitle"/>

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_subtitle"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_product_image"
            android:layout_marginTop="@dimen/main_padding"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_subtitle"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>