<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height"
    android:background="@color/colorPrimary"
    android:elevation="8dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/main_title"
        android:textColor="@color/color_text_white"
        android:textSize="@dimen/text_size_toolbar_title"
        android:textStyle="bold"/>

    <SearchView
        android:id="@+id/sv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:closeIcon="@drawable/ic_close"
        android:searchIcon="@drawable/ic_search"/>

</RelativeLayout>