<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/medium_padding"
    android:layout_marginEnd="@dimen/main_padding"
    android:layout_marginStart="@dimen/main_padding"
    android:layout_marginTop="@dimen/medium_padding">

    <ImageView
        android:id="@+id/iv_product_image"
        android:layout_width="@dimen/image_list_size"
        android:layout_height="@dimen/image_list_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_padding"
        android:layout_toEndOf="@+id/iv_product_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_subtitle"/>

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_subtitle"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="@dimen/separator_width"
        android:layout_height="1px"
        android:layout_below="@+id/iv_product_image"
        android:layout_marginTop="@dimen/main_padding"
        android:background="@color/color_dark_gray"/>

</RelativeLayout>